--- a/activitats.html
+++ b/activitats.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Portafoli</h1>
-    <a href="activitats.html">Anar a activitats</a>
 
+    <h1>Activitats HTML</h1>
+    
 </body>
 </html>
